apps/test-project/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-project
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.klr.kr
      secretName: test-klr-kr-tls
  rules:
    - host: test.klr.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-project
                port:
                  number: 80
